@@ -35,6 +35,27 @@ function Test-ShouldCreateNewSslCertificateBinding
     $ipAddress = '74.32.80.43'
     $port = '3847'
     $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
+    try
+    {
+        Assert-Null $binding
+        $binding = Get-SslCertificateBinding -IPAddress $ipAddress -Port $port
+        $ipPort = '{0}:{1}' -f $ipAddress,$port
+        Assert-Equal $ipPort $binding.IPPort
+        Assert-Equal $appID $binding.ApplicationID
+        Assert-Equal $cert.Thumbprint $binding.CertificateHash
+    }
+    finally
+    {
+        Remove-SslCertificateBinding -IPAddress $ipAddress -Port $port
+    }
+}
+
+function Test-ShouldReturnBinding
+{
+    $appID = '0e8a659e-8034-4ab1-ab82-dcb0f5e90bfd'
+    $ipAddress = '74.32.80.43'
+    $port = '3847'
+    $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint -PassThru
     $expectedBinding = Get-SslCertificateBinding -IPAddress $ipAddress -Port $port
     try
     {
@@ -57,11 +78,14 @@ function Test-ShouldUpdateExistingSslCertificateBinding
     $newAppID = '353364bb-1ca8-4d6c-a596-be7608d57771'
     $ipAddress = '74.38.209.47'
     $port = '8823'
-    $firstBinding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
-    $secondBinding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $newAppID -Thumbprint $cert.Thumbprint
+    $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
+    Assert-Null $binding
+    $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $newAppID -Thumbprint $cert.Thumbprint
+    Assert-Null $binding
+    $binding = Get-SslCertificateBinding -IPAddress $ipAddress -Port $port
     try
     {
-        Assert-Equal $newAppID $secondBinding.ApplicationID
+        Assert-Equal $newAppID $binding.ApplicationID
     }
     finally
     {
@@ -75,9 +99,10 @@ function Test-ShouldSupportShouldProcess
     $ipAddress = '54.72.38.90'
     $port = '4782'
     $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint -WhatIf
+    Assert-Null $binding
     try
     {
-        Assert-Null $binding
+        Assert-Null (Get-SslCertificateBinding -IPAddress $ipAddress -Port $port)
     }
     finally
     {
@@ -91,7 +116,8 @@ function Test-ShouldSupportShouldProcessOnBindingUpdate
     $newAppID = 'db48e0ec-6d8c-4b2c-9486-a2bb33c68b05'
     $ipAddress = '54.237.80.94'
     $port = '7821'
-    $firstBinding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
+    $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
+    Assert-Null $binding
     $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $newAppID -Thumbprint $cert.Thumbprint -WhatIf
     Assert-Null $binding
     $binding = Get-SslCertificateBinding -IPAddress $ipAddress -Port $port
@@ -114,7 +140,8 @@ function Test-ShouldSupportIPv6Address
     $binding = Set-SslCertificateBinding -IPAddress $ipAddress -Port $port -ApplicationID $appID -Thumbprint $cert.Thumbprint
     try
     {
-        Assert-NotNull $binding
+        Assert-Null $binding
+        $binding = Get-SslCertificateBinding -IPAddress $ipAddress -Port $port
         Assert-Equal $appID $binding.ApplicationID
     }
     finally
